--- a/css/style.css
+++ b/css/style.css
@@ -25,7 +25,10 @@ a {
     text-decoration:underline;
 }
 
-            
+.clar-fix {
+    clear: both;
+}  
+
 /* Styles for the experiment GUI */
 .panel {
     font-size:16px;
@@ -65,17 +68,18 @@ a {
 
 #sidebar-data {
     width: 100%;
-    height: 730px;
-    /* margin-top:  0em; */
+    height: 670px;
+    /* margin-top: 0em; */
 }
 
 #wrapper {
     margin: 0em auto;
     width: 1024px;
-    height: 768px;                
+    height: 768px;
 }
 
     #app-area {
+        width: 960px;
         height: 730px;
         margin: 1em;
     }
@@ -95,19 +99,19 @@ a {
 
  
 #title {
-    /* width: 60px; */ 
-    height: 4em; 
-    
+    /* width: 60px; */
+    height: 4em;
     /* background-image:url("../images/crate1.jpg"); */
     background-size:100% 100%;
     background-color:  white;
-    margin: 0.5em;
-    padding:  0.25em 2em;
+    margin: 5.5em;
+    margin: -0.5em;
+    m 2em;
 }
 
 .debug-menu {}
 
 #app-frame {
-    width: 75%;
+    width: 90%;
     margin:  0 auto;
 }
