--- a/css/style.css
+++ b/css/style.css
@@ -1,7 +1,21 @@
-/*
+/**
  * CSS Styles for VFS Demo App
  *
- * Copyright 2014-2015, Vancouver Film School
+ * @Copyright 2014-2015, Vancouver Film School, In cooperation with Kibble Games Inc.
+ * @author: Scott Henshaw
+ *
+ *  This program is free software: you can redistribute it and/or modify
+ *  it under the terms of the GNU General Public License as published by
+ *  the Free Software Foundation, either version 3 of the License, or
+ *  (at your option) any later version.
+ *   
+ *  This program is distributed in the hope that it will be useful,
+ *  but WITHOUT ANY WARRANTY; without even the implied warranty of
+ *  MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
+ *  GNU General Public License for more details.
+ *  
+ *  You should have received a copy of the GNU General Public License
+ *  along with this program.  If not, see <http://www.gnu.org/licenses/>.
  *
  */
 
@@ -10,25 +24,27 @@ body {
 }
 
 body,div {
-    margin:0;
+    padding: 0.5%;
     border:none;
     color: #000;
-    background-color: grey;
+    background-color: white;
     font-family: Helvetica, Arial;
-    background-color: #999;
     position:  relative;
+    width: 98%;
 }
 
 /* Styles for illustrating the example */
 a {
     color:#FFF;
     text-decoration:underline;
+} 
+          
+button {
+    padding: .5em 1em;
+    font-weight:  700;
+    font-size: 24px;
 }
-
-.clearfix {
-    clear: both;
-}  
-
+        
 /* Styles for the experiment GUI */
 .panel {
     font-size:16px;
@@ -41,85 +57,82 @@ a {
     padding: 10px;
 }
 
-
 .content {
-    background-color: white;
-    
+    background-color: white;    
 }
-
 
 .container {
     background-color: #DDD;
     border: 2px solid #000;
 }
 
+.flex-container {
+    display: flex;
+    justify-content: space-between;
+    align-items:  center;
+}
+
+.flex-item {
+    margin: 0.5em;
+}
 
 .main {
-    position: relative;
-    display:  inline-block;
-    height:   768px;
+    height: 700px;
     z-index:  100;
-}
-
-#sidebar {
-    width: 10%;
-    /* margin: 0 1em; */
-    padding: 0 1em;
-}
-
-#sidebar-data {
-    width: 100%;
-    height: 768px;
-}
-
-#wrapper {
-    margin: 0em auto;
-    width: 1024px;
-    height: 768px;
-}
-
-    #app-area {
-        width: 960px;
-        height: 730px;
-        margin: 1em;
-    }
-
-
-#game-area {
-    position: relative;
-    left: 0;
-    top: 0;
-    
-    width:100%;
-    height:100%;                
-                   
-    z-index:200;
-    overflow:hidden;
-}
-
- 
-#title {
-    /* width: 60px; */
-    height: 4em;
-    /* background-image:url("../images/crate1.jpg"); */
-    background-size:100% 100%;
-    background-color:  white;
-    margin: 5.5em;
-    margin: -0.5em;
-    m 2em;
 }
 
 .debug-menu {}
 
-#app-frame {
-    width: 90%;
-    margin:  0 auto;
+#wrapper {
+    width: 88%;
+    height: 700px;
 }
 
-header {
-    height:  8em;
-}
+    #app-frame {
+        width: 95%;
+        margin:  0 auto;
+    }
+    
+    #title {
+        height: 4em; 
+        
+        background-size:100% 100%;
+        background-color:  white;
+        margin: 0.5em;
+        padding:  0.25em 2em;
+    }
+    
+    #sidebar {
+        width: 200px;
+    }
+    
+    #sidebar-data {
+        width: 80%;
+        height: 95%;
+        margin: 1em;
+    }
+    
+    #app-area {
+        height: 95%;
+        padding: 1em;
+        width:  100%;
+    }
 
-#test-form {
-    margin-left: 1em;
-}
+    #game-area {
+        position: relative;
+        left: 0;
+        top: 0;
+        
+        width:100%;
+        height:100%;                
+                       
+        z-index:200;
+        overflow:hidden;
+    }
+     
+        #button-container {
+            bottom: 1em;
+            left: 50%;
+            position: absolute;
+            display: inline;
+        }
