--- a/css/style.css
+++ b/css/style.css
@@ -3,7 +3,203 @@
  *
  * @Copyright 2014-2015, Vancouver Film School, In cooperation with Kibble Games Inc.
  * @author: Scott Henshaw
- *
+ * @Contributor: Clinton Ramonida
+ */
+
+/* DEFAULTS */
+* {
+    margin: 0;
+    padding: 0;
+}
+
+body {
+    background-color: rgb(194, 193, 193);
+}
+
+/* GRID FRAME/CONTAINER (PARENT) */
+.grid-frame {
+    display: grid;
+    grid-gap: 5px;
+    grid-template: 
+    [row1-start] "navbar navbar navbar navbar" 50px [row1-end]
+    [row2-start] "headbar headbar headbar headbar" 150px [row2-end]
+    [row3-start] "sidecontent thecontent thecontent thecontent" 800px [row3-end]
+    [row4-start] "footcontent footcontent footcontent footcontent" 80px [row4-end];
+}
+
+/* GRID AREAS/ITEMS (CHILDREN) */
+.area {
+    border-style: solid;
+    border-width: 3px;
+    border-color: black;
+    border-radius: 5px;
+}
+
+.grid-header {
+    grid-area: headbar;
+}
+
+.grid-nav {
+    grid-area: navbar;
+}
+
+.grid-content {
+    grid-area: thecontent;
+    margin: 5px;
+}
+
+.grid-side {
+    grid-area: sidecontent;
+    margin: 5px;
+}
+
+.grid-foot {
+    grid-area: footcontent;
+}
+
+/* GRID CONTAINER CHILD (CHILD BUT A CONTAINER) */
+.grid-frame-child {
+    display: grid;
+    grid-template-columns: repeat(8, 1fr);
+    grid-template-rows: repeat(4, 150px [row-start]);
+}
+
+/* GRID AREA FOR "GRID CONTAINER CHILD" */
+.area-child{
+    border-style: solid;
+    border-width: 3px;
+    border-color: gray;
+    border-radius: 5px;
+}
+
+.grid-forms{
+    grid-area: buttons;
+    grid-column: 2/8;
+    grid-row: 1/3;
+}
+
+.grid-results{
+    grid-area: results;
+    grid-column: 2/8;
+    grid-row: 3/5;
+}
+
+#results-area{
+    position: absolute;
+}
+
+
+/* FLEX CONTAINER (PARENT) */
+.flexbox {
+    display: flex;
+    background-color: rgb(241, 244, 247);
+    height: 100%;
+}
+
+/* navigation bar */
+
+.menu{
+    background-color: #333;
+}
+
+ul {
+    display: flex;
+    justify-content: flex-start;
+    list-style-type: none;
+    margin: 0;
+    padding: 0;
+    overflow: hidden;
+
+}
+
+li {
+    float: left;
+}
+
+li a {
+    display: block;
+    color: white;
+    text-align: center;
+    padding: 14px 16px;
+    text-decoration: none;
+}
+
+li a:hover {
+    background-color: #111;
+}
+
+/* header */
+.header {
+    flex-direction: column;
+    justify-content: center;
+}
+
+/* content */
+.content {
+    flex-direction: column;
+}
+
+/* sidebar */
+.sidebar {
+    flex-direction: column;
+}
+
+/* footer */
+.footer {
+    flex-direction: column;
+    justify-content: center;
+}
+
+.buttons {
+    justify-content: center;
+    align-items: center;
+}
+
+/* FLEX ITEMS (CHILDREN) */
+.flexitem{
+    align-self: center;
+}
+
+.spacer{
+    height: 80px;
+}
+
+.btn{
+    background-color: white;
+    color: black;
+    border: 2px solid black; /* Black */
+    height: 40px;
+    width: 80px;
+    margin: 2px;
+}
+
+.btn:hover {
+    background-color: #555555;
+    color: white;
+}
+
+h1 {
+    border-style: solid;
+    border-width: 3px;
+    border-color: black;
+}
+
+h2 {
+    border-style: solid;
+    border-width: 3px;
+    border-color: royalblue;
+    margin: 3px;
+}
+
+h3{ /* not a flex item */
+    margin: 5px;
+    border-style: solid;
+    border-width: 3px;
+    border-color: rosybrown;
+}
+        
+ /**  
+ *  @license:
  *  This program is free software: you can redistribute it and/or modify
  *  it under the terms of the GNU General Public License as published by
  *  the Free Software Foundation, either version 3 of the License, or
@@ -17,122 +213,4 @@
  *  You should have received a copy of the GNU General Public License
  *  along with this program.  If not, see <http://www.gnu.org/licenses/>.
  *
- */
-
-body {
-    background-color:black;
-}
-
-body,div {
-    padding: 0.5%;
-    border:none;
-    color: #000;
-    background-color: white;
-    font-family: Helvetica, Arial;
-    position:  relative;
-    width: 98%;
-}
-
-/* Styles for illustrating the example */
-a {
-    color:#FFF;
-    text-decoration:underline;
-} 
-          
-button {
-    padding: .5em 1em;
-    font-weight:  700;
-    font-size: 24px;
-}
-        
-/* Styles for the experiment GUI */
-.panel {
-    font-size:16px;
-    position: fixed;
-    top:0;
-    right:1%;
-    width:12%;
-    z-index:2;
-    background-color: #555;
-    padding: 10px;
-}
-
-.content {
-    background-color: white;    
-}
-
-.container {
-    background-color: #DDD;
-    border: 2px solid #000;
-}
-
-.flex-container {
-    display: flex;
-    justify-content: space-between;
-    align-items:  center;
-}
-
-.flex-item {
-    margin: 0.5em;
-}
-
-.main {
-    height: 700px;
-    z-index:  100;
-}
-
-.debug-menu {}
-
-#wrapper {
-    width: 88%;
-    height: 700px;
-}
-
-    #app-frame {
-        width: 95%;
-        margin:  0 auto;
-    }
-    
-    #title {
-        height: 4em; 
-        
-        background-size:100% 100%;
-        background-color:  white;
-        margin: 0.5em;
-        padding:  0.25em 2em;
-    }
-    
-    #sidebar {
-        width: 200px;
-    }
-    
-    #sidebar-data {
-        width: 80%;
-        height: 95%;
-        margin: 1em;
-    }
-    
-    #app-area {
-        height: 95%;
-        padding: 1em;
-        width:  100%;
-    }
-
-    #game-area {
-        position: relative;
-        left: 0;
-        top: 0;
-        
-        width:100%;
-        height:100%;                
-                       
-        z-index:200;
-        overflow:hidden;
-    }
-     
-        #button-container {
-            bottom: 1em;
-            left: 50%;
-            position: absolute;
-            display: inline;
-        }
+ */        
