Tidying up comments

--- a/css/media.css
+++ b/css/media.css
@@ -2,8 +2,8 @@
  * CSS Media Query Styles for VFS Demo App
  *
  * Copyright 2014-2015, Vancouver Film School
- * @Author: Clinton Ramonida
- *
+ * @Author: Clinton Ramonida & Scott Henshaw
+ * 
  *
  */
  
